# todo_list_portal

./: .gitignore  CLAUDE.md  alembic.ini  app.log.1  app.log.2  app.log.4  app.log.5  babel.cfg  main.py  pyproject.toml  requirements.txt
portal_core/: pyproject.toml
portal_core/portal_core/: __init__.py  app_factory.py  config.py  database.py  init_db.py
portal_core/portal_core/core/: constants.py  deps.py  encryption.py  exception_handlers.py  exceptions.py  i18n.py  logging_config.py  utils.py
portal_core/portal_core/crud/: __init__.py  auth_audit_log.py  base.py  department.py  login_attempt.py  menu.py  oauth_provider.py  oauth_state.py  password_reset_token.py  role.py  user.py  user_oauth_account.py
portal_core/portal_core/models/: __init__.py  auth_audit_log.py  department.py  login_attempt.py  menu.py  oauth_provider.py  oauth_state.py  password_reset_token.py  role.py  user.py  user_oauth_account.py
portal_core/portal_core/routers/: __init__.py  api_auth.py  api_departments.py  api_menus.py  api_oauth.py  api_roles.py  api_users.py
portal_core/portal_core/schemas/: __init__.py  department.py  (+4 more)
portal_core/tests/: conftest.py  test_admin_ui_pages.py  test_app_factory.py  test_auth.py  test_auth_security.py  test_crud_base.py  test_crud_menus.py  test_crud_roles.py  test_departments.py  test_i18n.py  test_menus_api.py  test_nav_cache.py  test_nav_filtering.py  test_oauth.py  test_password_reset.py  test_rbac.py  test_rbac_models.py  test_rbac_schemas.py  test_require_permission.py  test_roles_api.py  test_seed_rbac.py  test_users.py  test_websocket.py
(+448 files in other folders)
