[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-core"
version = "0.1.0"
description = "Shared authentication and user management base for portal applications"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "cryptography>=41.0.0",
    "babel>=2.12.0",
    "httpx>=0.24.0",
    "httpx-oauth>=0.15.0",
    "fastapi-csrf-protect>=1.0.7",
    "email-validator>=2.0.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["portal_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
